index//admin page

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>PlayToWin</title>
     <link
       rel="shortcut icon"
-      href="./images/2de4e455991d23e244e0a5ad30243434.jpg"
+      href="./images/black-four-aces-poker-card-illustration-free-vector.jpg"
       type="image/x-icon"
     />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -27,12 +28,16 @@
           /></a>
         </div>
         <div class="nav-links">
-          <a href="./admin.html"><i class="fa-solid fa-user-tie fa-3x"></i></a>
-          <a href="./cart.html"
-            ><i class="fa-solid fa-cart-shopping fa-3x"></i
-          ></a>
+          <a href="./admin.html">
+            <i id="myIcon" class="fa-solid fa-user-tie fa-3x"></i>
+          </a>
+          <a href="./cart.html">
+            <i id="myIcon" class="fa-solid fa-cart-shopping fa-3x"></i>
+          </a>
         </div>
       </div>
     </div>
+    <div class="decks"></div>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
