--- a/admin.html
+++ b/admin.html
@@ -41,11 +41,11 @@
         </div>
         <div>
           <label for="price">Deck price</label>
-          <input id="price" />
+          <input id="price" type="number" min="0" />
         </div>
         <div>
           <label for="quantity">Quantity</label>
-          <input id="quantity" />
+          <input id="quantity" type="number" min="0" />
         </div>
         <div>
           <label for="image-url">Image URL</label>
