cart/details page

--- a/details.html
+++ b/details.html
@@ -34,11 +34,8 @@
           ></a>
         </div>
       </div>
-      <div class="content">
-        <div class="cart-items"></div>
-        <div class="cart-total"></div>
-      </div>
+      <div class="content"></div>
     </div>
-    <script type="module" src="./cart.js"></script>
+    <script type="module" src="./details.js"></script>
   </body>
 </html>
