--- a/details.html
+++ b/details.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cart Page</title>
+    <title>Description Page</title>
     <link
       rel="shortcut icon"
       href="./images/black-four-aces-poker-card-illustration-free-vector.jpg"
@@ -18,6 +18,7 @@
     />
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./cart.css" />
+    <link rel="stylesheet" href="./details.css"
   </head>
   <body>
     <div class="container">
